added html and css for calculator

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <div class="main__box">
         <section class="box__one">
+            <div class="box__one__top">
+                
+            </div>
             <div class="box__two">
                 <span>
                     <small>X<sup>2</sup></small>
